# rust-hello-world-server

./: .env.template  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_user_table.rs
src/: env_vars.rs  main.rs
src/components/: database.rs  env_vars.rs  mod.rs  router.rs  server.rs
src/components/controllers/: user_controller.rs
src/components/handlers/: health_check.rs  mod.rs  user_router.rs
src/components/repositories/: user_repository.rs
src/components/services/: user_service.rs
src/handlers/: hello_world.rs
