[package]
name = "rust-hello-world-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
sea-orm = { version = "1.1.1", features = [
    'sqlx-postgres',
    "runtime-tokio-rustls",
    "macros",
] }
serde_json = "1.0.135"
tokio = { version = "1.28.2", features = ["full"] }
